@@ -40,7 +40,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2005-2020 Michal Josef Špaček
+    © 2005-2021 Michal Josef Špaček
 
     BSD 2-Clause License
 
