@@ -1,6 +1,7 @@
 0.11
  [Common]
  - Add blank lines after arguments and before return.
+ - Update copyright years.
 
 0.10 2020-10-14T00:56:08+02:00
  [Common]
